@@ -2,46 +2,55 @@
 
 # S4 class definition
 # Text document collection
-setClass("textdoccol", representation(docs = "list",
-                                      tdm = "termdocmatrix"))
+setClass("textdoccol",
+         representation(tdm = "termdocmatrix"),
+         contains = c("list"))
 
-# Accessor function
-if (!isGeneric("docs")) {
-    if (is.function("docs"))
-        fun <- docs
+# Accessor functions as described in "S4 Classes in 15 pages, more or less"
+
+if (!isGeneric("tdm")) {
+    if (is.function("tdm"))
+        fun <- tdm
     else
-        fun <- function(object) standardGeneric("docs")
-    setGeneric("docs", fun)
+        fun <- function(object) standardGeneric("tdm")
+    setGeneric("tdm", fun)
 }
-setMethod("docs", "textdoccol", function(object) object@docs)
+setMethod("tdm", "textdoccol", function(object) object@tdm)
 
-setGeneric("textdoccol", function(object) standardGeneric("textdoccol"))
+# Constructors
+
+setGeneric("textdoccol", function(object, ...) standardGeneric("textdoccol"))
 # Read in text documents in XML Reuters Corpus Volume 1 (RCV1) format
-setMethod("textdoccol", "character", function(object) {
-    require(XML)
+setMethod("textdoccol",
+          c("character", "logical", "logical",  "character", "logical", "character", "integer", "integer", "logical"),
+          function(object, stripWhiteSpace = FALSE, toLower = FALSE, weighting = "tf", stemming = FALSE,
+                   language = "german", minWordLength = 3, minDocFreq = 1, stopwords = NULL) {
+              require(XML)
 
-    tree <- xmlTreeParse(object)
-    new("textdoccol", docs = xmlApply(xmlRoot(tree), parseNewsItem))
-})
+              tree <- xmlTreeParse(object)
+              tdcl <- new("textdoccol", .Data = xmlApply(xmlRoot(tree), parseNewsItem, stripWhiteSpace, toLower))
+              tdcl@tdm = termdocmatrix(tdcl, weighting, stemming, language, minWordLength, minDocFreq, stopwords)
+
+              tdcl
+          })
 
 # TODO: Implement lacking fields.
 # For this we need the full RCV1 XML set to know where to find those things
-parseNewsItem <- function(node) {
+parseNewsItem <- function(node, stripWhiteSpace = FALSE, toLower = FALSE) {
     author <- "Not yet implemented"
     timestamp <- xmlAttrs(node)[["date"]]
     description <- "Not yet implemented"
     id <- as.integer(xmlAttrs(node)[["itemid"]])
     origin <- "Not yet implemented"
-    # TODO: Concatenate list elements (= XML paragraphs) to a single string
     corpus <- unlist(xmlApply(node[["text"]], xmlValue), use.names = FALSE)
+
+    if (stripWhiteSpace)
+        corpus <- gsub("[[:space:]]+", " ", corpus)
+    if (toLower)
+        corpus <- tolower(corpus)
+
     heading <- xmlValue(node[["title"]])
 
-    new("textdocument", author = author, timestamp = timestamp, description = description,
-        id = id, origin = origin, corpus = corpus, heading = heading)
+    new("textdocument", .Data = corpus, author = author, timestamp = timestamp,
+        description = description, id = id, origin = origin, heading = heading)
 }
-
-# If necessary build the term-document matrix for a given text document collection
-setGeneric("buildTDM", function(object) standardGeneric("buildTDM"))
-setMethod("buildTDM", "textdoccol", function(object) {
-    termdocmatrix(docs(object))
-})
