@@ -2,15 +2,17 @@
 
 # S4 class definition
 # Text document
-setClass("textdocument", representation(author = "character",
-                                        timestamp = "character",
-                                        description = "character",
-                                        id = "integer",
-                                        origin = "character",
-                                        corpus = "character",
-                                        heading = "character"))
+setClass("textdocument",
+         representation(author = "character",
+                        timestamp = "character",
+                        description = "character",
+                        id = "integer",
+                        origin = "character",
+                        heading = "character"),
+         contains = c("character"))
 
-# Accessor function
+# Accessor functions as described in "S4 Classes in 15 pages, more or less"
+
 if (!isGeneric("author")) {
     if (is.function("author"))
         fun <- author
@@ -19,7 +21,6 @@ if (!isGeneric("author")) {
 }
 setMethod("author", "textdocument", function(object) object@author)
 
-# Accessor function
 if (!isGeneric("timestamp")) {
     if (is.function("timestamp"))
         fun <- timestamp
@@ -28,7 +29,6 @@ if (!isGeneric("timestamp")) {
 }
 setMethod("timestamp", "textdocument", function(object) object@timestamp)
 
-# Accessor function
 if (!isGeneric("description")) {
     if (is.function("description"))
         fun <- description
@@ -37,7 +37,6 @@ if (!isGeneric("description")) {
 }
 setMethod("description", "textdocument", function(object) object@description)
 
-# Accessor function
 if (!isGeneric("id")) {
     if (is.function("id"))
         fun <- id
@@ -46,7 +45,6 @@ if (!isGeneric("id")) {
 }
 setMethod("id", "textdocument", function(object) object@id)
 
-# Accessor function
 if (!isGeneric("origin")) {
     if (is.function("origin"))
         fun <- origin
@@ -55,16 +53,6 @@ if (!isGeneric("origin")) {
 }
 setMethod("origin", "textdocument", function(object) object@origin)
 
-# Accessor function
-if (!isGeneric("corpus")) {
-    if (is.function("corpus"))
-        fun <- corpus
-    else fun <- function(object) standardGeneric("corpus")
-    setGeneric("corpus", fun)
-}
-setMethod("corpus", "textdocument", function(object) object@corpus)
-
-# Accessor function
 if (!isGeneric("heading")) {
     if (is.function("heading"))
         fun <- heading
