@@ -1,3 +1,8 @@
+2005-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* Changed class interfaces in various files. Weighting of the text
+	matrix is now possible.
+
 2005-11-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: One can build term-document matrices if
